--- a/Sjuklöner/Views/Claims/RecommendationReceipt.cshtml
+++ b/Sjuklöner/Views/Claims/RecommendationReceipt.cshtml
@@ -30,6 +30,8 @@
         <div class="col">
             <p class="bold-14 left-margin-18">Referensnummer: @Model.ClaimNumber</p>
             <p class="bold-14 left-margin-18">Yrkat belopp (kr): @Model.ClaimSum</p>
+            <p class="bold-14 left-margin-18">Rekommenderat belopp (kr): @Model.ApprovedSum</p>
+            <p class="bold-14 left-margin-18">Rekommenderat avslag (kr): @Model.RejectedSum</p>
         </div>
     </div>
 }
