--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -518,6 +518,12 @@ li a {
     padding-right: 9px;
 }
 
+.bold-24 {
+    font-size: 24px;
+    font-weight: bold;
+    padding-right: 5px;
+}
+
 .hr-low-margin {
     margin-bottom: 2px;
     margin-top: 2px;
