--- a/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
+++ b/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
@@ -9,7 +9,7 @@
     <section id="loginForm">
         @*@using (Html.BeginForm("StodSystemLogin", "Claims", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))*@
 
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("StodSystemLogin", "Claims", FormMethod.Post))
             {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
