Changed the conditions for hiding the layout page.

--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
             </div>
         </div>
     }
-    else if (Url.Action().ToString().Length < 15 || Url.Action().ToString().ToLower() != "/claims/stodsystemLogin" && Url.Action().ToString().ToLower().Remove(14) != "/claims/decide" & Url.Action().ToLower().ToString() != "/claims/stodsystemlogout")
+    else if (Url.Action().ToString().Length < 15 || Url.Action().ToString().ToLower() != "/claims/stodsystemlogin" && Url.Action().ToString().ToLower().Remove(14) != "/claims/decide" & Url.Action().ToLower().ToString() != "/claims/stodsystemlogout")
     {
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container no-padding-left">
