Added Robin visualisation

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1081,3 +1081,15 @@ a:hover, a:focus {
     color: #ffffff;
     border-radius: 3px;
 }
+
+#divRobin {
+   left:1000px;
+   top:1500px; /*Outta sight*/
+   width:250px;
+   height:185px;
+   transition-delay:3s;
+   transition-timing-function:ease-out;
+   transition: top 4s;
+   -webkit-transition:top 4s;
+
+}
