--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewBag.Title - Sjuklöner Assistans</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @if (IsSectionDefined("RobinRevealed"))
+    {
+        @RenderSection("RobinRevealed");
+    }
 </head>
 <body>
     @if (User.IsInRole("AdministrativeOfficial"))
