Modified Robin reveal

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1141,13 +1141,16 @@ a:hover, a:focus {
 }
 
 #divRobin {
-   left:1000px;
-   top:1500px; /*Outta sight*/
+   position:absolute;
+   left:850px;
+   top:1200px; /*Outta sight*/
    width:250px;
    height:185px;
+   z-index:100;
    transition-delay:3s;
    transition-timing-function:ease-out;
    transition: top 4s;
    -webkit-transition:top 4s;
+   float:right;
 
 }
