--- a/Sjuklöner/Views/Claims/ClaimDetails.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetails.cshtml
@@ -360,26 +360,29 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-md-3">
-                            <div class="form-group line-height-12 display-large-font">
-                                <div class="row label-padding">
-                                    @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
-                                </div>
-                                <div class="row display-padding">
-                                    @Html.DisplayFor(modelItem => Model.ApprovedSum)
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col col-md-3">
-                            <div class="form-group line-height-12 display-large-font">
-                                <div class="row label-padding">
-                                    @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
-                                </div>
-                                <div class="row display-padding">
-                                    @Html.DisplayFor(modelItem => Model.RejectedSum)
+                        @if (Model.DecisionMade == true)
+                        {
+                            <div class="col col-md-3">
+                                <div class="form-group line-height-12 display-large-font">
+                                    <div class="row label-padding">
+                                        @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                                    </div>
+                                    <div class="row display-padding">
+                                        @Html.DisplayFor(modelItem => Model.ApprovedSum)
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                            <div class="col col-md-3">
+                                <div class="form-group line-height-12 display-large-font">
+                                    <div class="row label-padding">
+                                        @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label-left-align control-label-large col-md-12" })
+                                    </div>
+                                    <div class="row display-padding">
+                                        @Html.DisplayFor(modelItem => Model.RejectedSum)
+                                    </div>
+                                </div>
+                            </div>
+                        }
                         @*<div class="col col-md-3">
                                 <div class="form-group line-height-12">
                                     <div class="row label-padding">
@@ -811,7 +814,7 @@
                 <div class="row">
                     <div class="col col-md-12 form-group-div-frame">
                         <div class="row form-group-heading">
-                            Beräkning av modellbelopp
+                            Beräkning av ersättningsbelopp
                         </div>
                         <div class="row form-group-subheading">
                             Karensdag, @Model.QualifyingDayDate
@@ -1136,7 +1139,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-md-3 text-right bold-24">
+                            <div class="col col-md-3 text-right bold-18">
                                 @Html.DisplayFor(modelItem => Model.SickPayD2T14) Kr
                             </div>
                             <div class="row">
@@ -1265,15 +1268,15 @@
                     </div>
                 </div>
             }
+        </div>
 
-
-            @*<br />
-                <br />
-                <br />
-                <p>*@
-            @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-                @Html.ActionLink("Back to List", "Index")*@
-            @*</p>*@
+        @*<br />
+            <br />
+            <br />
+            <p>*@
+        @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+            @Html.ActionLink("Back to List", "Index")*@
+        @*</p>*@
     </body>
 }
 
