Pre-filled hours for step two of claim creation.

--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @if (User.IsInRole("AdministrativeOfficial"))
     {
         <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+            <div class="container no-padding-left">
                 <div class="navbar-header">
                     <img class="helsingborg-logo" src="~/Content/Images/helsingborg.svg" /><img class="bitoreq-logo" src="~/Content/Images/Big_blue_black.png" />
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
