Removed old model sum calculation and now using one common calculation whereever needed. Properties added in claim.cs.

--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -86,7 +86,7 @@
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
                             @*<td>
                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
@@ -176,7 +176,7 @@
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
                             @*<td>
                                     @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
@@ -272,7 +272,7 @@
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ClaimSum)
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
                             <td class="highlight-green-bold">
                                 @Html.DisplayFor(modelItem => item.ApprovedSum)
