--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "View";
 }
 
-@using (Html.BeginForm("ShowRecommendationReceipt", "Claims", FormMethod.Post))
+@using (Html.BeginForm("Recommend", "Claims", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
