--- a/Sjuklöner/Views/Claims/Decide.cshtml
+++ b/Sjuklöner/Views/Claims/Decide.cshtml
@@ -9,7 +9,7 @@
     {
         @Html.AntiForgeryToken()
         
-        <h2 style="text-align: center">Stödsystem, VoO</h2>
+        <h2 style="text-align: center">Stödsystem, VOF</h2>
 
         <br />
         <br />
