--- a/Sjuklöner/Views/Claims/Create.cshtml
+++ b/Sjuklöner/Views/Claims/Create.cshtml
@@ -357,12 +357,12 @@
                 <div class="col col-md-offset-2 col-md-1">
                     <input class="btn btn-primary btn-primary-small" type="submit" name="answer" value="Till steg 2" id="proceed" />
                 </div>
-                <div class="col col-md-1">
+                @*<div class="col col-md-1">
                     <input class="btn btn-secondary btn-secondary-small" type="submit" name="answer" value="Spara" id="save" />
                 </div>
                 <div class="col col-md-1">
                     <input class="btn btn-secondary btn-secondary-small" type="submit" name="answer" value="Avbryt" id="cancel" />
-                </div>
+                </div>*@
             </div>
             </div>
            
