--- a/Sjuklöner/Views/Claims/Receipt.cshtml
+++ b/Sjuklöner/Views/Claims/Receipt.cshtml
@@ -18,7 +18,7 @@
 }
 
 
-<div class="row margin-breadcrumb">
+@*<div class="row margin-breadcrumb">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item breadcrumb-font">@Html.ActionLink("Ansökningar", "Index", null, new { @class = "breadcrumb-padding" })</li>
@@ -28,7 +28,7 @@
             <li class="breadcrumb-item active breadcrumb-font breadcrumb-padding" aria-current="page">Bekräftelse</li>
         </ol>
     </nav>
-</div>
+</div>*@
 
 @*@using (Html.BeginForm("AddHours", "Claims", FormMethod.Get))*@
 @using (Html.BeginForm())
