--- a/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
+++ b/Sjuklöner/Views/Claims/StodSystemLogin.cshtml
@@ -17,7 +17,7 @@
             <div class="frame-procapita-login">
 
                 <div class="grey-filler bold-14">
-                    Inloggning: Stödsystem, Vård- och Omsorg
+                    Inloggning: Stödsystem
                 </div>
 
 
