--- a/Sjuklöner/Views/Claims/StodsystemLogout.cshtml
+++ b/Sjuklöner/Views/Claims/StodsystemLogout.cshtml
@@ -4,6 +4,6 @@
 }
 <div style="background-color:lightgrey; padding:300px; border-radius: 10px;">
     <h1>Information om beslutet har skickats till ombudet.</h1>
-    <h2>Du loggas nu ut från Stödsystem, VOF</h2>
+    <h2>Du loggas nu ut från Stödsystem</h2>
 </div>
 
