--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -252,7 +252,7 @@ li a {
     font-size: 50px;
     /*line-height: 34px;*/
     padding: 0 15px 0 18px;
-    /*margin-top: 151px;*/
+    margin-top: 151px;
     margin-bottom: 0;
     /*margin-bottom: 40px;*/
     /*font-family: "caslonno224ef-blackregular", "Whitney SSm A", "Whitney SSm B", Arial, sans-serif;
@@ -1154,7 +1154,7 @@ a:hover, a:focus {
 
 #divRobin {
    position:absolute;
-   left:75%;
+   left: 75% !important;
    top:1200px; /*Outta sight*/
    width:250px;
    height:185px;
